# Hexagonal-Auth-Service

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/adapters/: nexus.py
app/adapters/outbound/: config.py
app/adapters/outbound/access_token/: issuer.py  verifier.py
app/application/cases/: __init__.py
app/application/cases/user/: __init__.py  change_password.py  login.py  password_recover.py  password_recover_request.py  refresh_token.py  register.py  revoke_token.py  verify_email.py
app/application/dto/: user.py
app/application/events/: __init__.py  security.py
app/application/exceptions/: __init__.py  concurrency.py  conflict.py  not_found.py
app/config/: __init__.py  settings.py
app/core/ports/: config.py  repositories.py
app/core/utils/: security.py
app/infrastructure/db/: postgres.py
app/infrastructure/redis/: client.py
migrations/: env.py
migrations/versions/: 364c0924848c_restructure_tables.py  4a5651fa4918_rename_password_reset_tokens_to_.py  4dd9b045d9d8_add_on_delete_cascade_to_token_fks.py  5a61177eee13_add_versions.py  abdf4009ef15_initial_tables.py  f5c23607d425_remove_username_field.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py  test_login.py  test_password.py  test_register.py  test_token.py
tests/integration/repositories/: conftest.py  test_one_time_token_repository.py  test_refresh_token_repository.py  test_user_repository.py
tests/unit/: conftest.py
(+65 files in other folders)
